# pyside6-qt-project-template

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/app/: app.py  main_window.py
src/app/core/: logging.py
src/app/tools/: build_ui.py
src/app/ui/: main_window.ui
src/app/ui_generated/: main_window_ui.py
