[project]
name = "app"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "pydantic>=2.7",
]

[project.scripts]
app = "src.app.app:main"



[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
